Updating packages to support PHP 5.3

--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,10 @@
     },
     "autoload": {
         "psr-4": {"OpenExRt\\": "src/"}
+    },
+    "config": {
+        "platform": {
+            "php": "5.3.3"
+        }
     }
 }
