--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,10 @@
         }
     ],
     "type": "library",
+    "require": {
+        "php": ">=5.3.3",
+        "ext-curl": "*"
+    },
     "require-dev": {
         "phpunit/phpunit": "^4.8"
     },
