[TravisCI] Removing nightly build as causing failures in CI

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "authors": [
         {
             "name": "Dan Belden",
-            "email": "me@danbelden.com"
+            "email": "me@danbelden.com",
+            "homepage": "https://github.com/danbelden"
         }
     ],
     "type": "library",
